--- a/localisation/KR_National_France_l_english.yml
+++ b/localisation/KR_National_France_l_english.yml
@@ -1463,7 +1463,7 @@ nfa.3.d:0 "마치 대중의 지지 부족만으로는 충분치 않았던 것처
 nfa.3.a:0 "아마 다 괜찮을거야!"
 
 nfa.4.t:0 "친우의 죽음"
-nfa.4.d:0 "His Majesty George V, by the Grace of God, of the United Kingdom of Great Britain and Ireland and of the British Dominions beyond the Seas, King, Defender of the Faith, Emperor of India, friend of France, our great ally during the Great War and since our exile, as well as a personal friend of Marshal Pétain since the two met on the battlefields two decades ago has died today at 70 years old. Though the situation is unfortunately tense at home, given the magnitude of the event it is important for the Entente that the Lion attends the funeral of George V and the coronation of his son Edward, and more personally for Pétain it is important to mourn a friend and ally, who like him oversaw the exile of his people after bloody revolutions in their homelands, and like him was wholeheartedly dedicated to one day come back and retake what is rightfully theirs. And so Marshal Pétain embarked on a special Trans-Atlantic flight, ready to honour the memory of a friend but celebrate a new era of Anglo-French friendship."
+nfa.4.d:0 "하나님의 은총으로 그레이트브리튼 및 아일랜드 연합왕국과 해외 영국 자치령의 왕, 신앙의 수호자, 인도의 황제, 그리고 프랑스의 친구이자 대전쟁과 망명 도중 위대한 동맹이 되어주셨던, 동시에 20년 전 전장에서 함께한 이래로 페탱 원수님의 개인적인 친구이기도 하셨던 조지 5세 폐하께서, 오늘 70세의 나이로 승하하셨습니다. 비록 여기 알제의 상황이 상당히 긴박하기는 하지만, 협상국에게 있어 페탱 원수님이 조지 5세 폐하의 장례식과 그분의 아들이신 에드워드 왕자님의 대관식, 두 중대사에 함께한다는 것은 큰 의미가 있는데다, 페탱 원수님께는 원수님처럼 끔찍한 혁명으로 자신의 국민들이 고향에서 쫓겨나는 것을 똑같이 보았으며, 동시에 본디 자신의 것이였던 것을 모든 노력을 다해 되찾으려 했던 친우였던 폐하의 죽음을 애도한다는 사적인 이유도 있는 만큼, 원수님께선 친우의 과거를 추모하고, 동시에 영국과 프랑스의 동맹관계의 새로운 시대를 축하하기 위해, 특별한 대서양 횡단 비행에 나서셨습니다."
 nfa.4.a:0 "국왕 폐하께서 승하하셨다, 새로운 국왕 폐하 만세!"
 
 nfa.5.t:0 "캐나다의 사자"
